Update CLI commands to namespace-style (PKI refactoring)
Breaking changes from PKI tool:
- pki init-ca → pki ca init
- pki issue → pki cert issue
- pki csr → pki cert csr
- pki revoke → pki cert revoke
- pki gen-crl → pki cert gen-crl
- pki info → pki inspect
- pki list → pki cert list

Updated 92 files across journey demos, reference use cases,
profiles, and documentation.

--- a/journey/00-quickstart/profiles/classic-root-ca.yaml
+++ b/journey/00-quickstart/profiles/classic-root-ca.yaml
@@ -14,7 +14,7 @@
 #   For quantum-resistant PKI, see journey/02-full-chain (ML-DSA).
 #
 # Example:
-#   pki init-ca --profile profiles/classic-root-ca.yaml \
+#   pki ca init --profile profiles/classic-root-ca.yaml \
 #       --name "Classic Root CA" --dir ./classic-ca
 #
 # =============================================================================
