--- a/journey/02-full-chain/profiles/pqc-tls-server.yaml
+++ b/journey/02-full-chain/profiles/pqc-tls-server.yaml
@@ -13,7 +13,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki issue --ca-dir ./issuing-ca \
+#   pki cert issue --ca-dir ./issuing-ca \
 #       --profile profiles/pqc-tls-server.yaml \
 #       --cn server.example.com --dns server.example.com \
 #       --out server.crt --key-out server.key
