--- a/journey/09-cms-encryption/profiles/pqc-ca.yaml
+++ b/journey/09-cms-encryption/profiles/pqc-ca.yaml
@@ -12,7 +12,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki init-ca --profile profiles/pqc-ca.yaml \
+#   pki ca init --profile profiles/pqc-ca.yaml \
 #       --name "Encryption Demo CA" --dir ./encryption-ca
 #
 # =============================================================================
