--- a/journey/10-crypto-agility/profiles/classic-ca.yaml
+++ b/journey/10-crypto-agility/profiles/classic-ca.yaml
@@ -14,7 +14,7 @@
 # Quantum Safety: VULNERABLE
 #
 # Example:
-#   pki init-ca --profile profiles/classic-ca.yaml \
+#   pki ca init --profile profiles/classic-ca.yaml \
 #       --name "Classic CA" --dir ./classic-ca
 #
 # =============================================================================
