--- a/journey/10-crypto-agility/profiles/hybrid-ca.yaml
+++ b/journey/10-crypto-agility/profiles/hybrid-ca.yaml
@@ -16,7 +16,7 @@
 # Quantum Safety: PROTECTED (Hybrid)
 #
 # Example:
-#   pki init-ca --profile profiles/hybrid-ca.yaml \
+#   pki ca init --profile profiles/hybrid-ca.yaml \
 #       --name "Hybrid CA" --dir ./hybrid-ca
 #
 # =============================================================================
