--- a/journey/02-full-chain/profiles/pqc-root-ca.yaml
+++ b/journey/02-full-chain/profiles/pqc-root-ca.yaml
@@ -13,7 +13,7 @@
 #   ML-DSA-87 is the strongest ML-DSA variant.
 #
 # Example:
-#   pki init-ca --profile profiles/pqc-root-ca.yaml \
+#   pki ca init --profile profiles/pqc-root-ca.yaml \
 #       --name "PQ Root CA" --dir ./root-ca
 #
 # =============================================================================
