--- a/journey/04-revocation/profiles/pqc-ca.yaml
+++ b/journey/04-revocation/profiles/pqc-ca.yaml
@@ -12,7 +12,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki init-ca --profile profiles/pqc-ca.yaml \
+#   pki ca init --profile profiles/pqc-ca.yaml \
 #       --name "Revocation Demo CA" --dir ./revocation-ca
 #
 # =============================================================================
