--- a/journey/06-code-signing/profiles/pqc-ca.yaml
+++ b/journey/06-code-signing/profiles/pqc-ca.yaml
@@ -9,7 +9,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki init-ca --profile profiles/pqc-ca.yaml \
+#   pki ca init --profile profiles/pqc-ca.yaml \
 #       --name "Code Signing CA" --dir ./code-signing-ca
 #
 # =============================================================================
