--- a/journey/07-timestamping/profiles/pqc-ca.yaml
+++ b/journey/07-timestamping/profiles/pqc-ca.yaml
@@ -9,7 +9,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki init-ca --profile profiles/pqc-ca.yaml \
+#   pki ca init --profile profiles/pqc-ca.yaml \
 #       --name "TSA CA" --dir ./tsa-ca
 #
 # =============================================================================
