--- a/journey/09-cms-encryption/profiles/signing.yaml
+++ b/journey/09-cms-encryption/profiles/signing.yaml
@@ -18,7 +18,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki issue --ca-dir ./encryption-ca \
+#   pki cert issue --ca-dir ./encryption-ca \
 #       --profile profiles/signing.yaml \
 #       --cn "Alice" \
 #       --out alice-sign.crt --key-out alice-sign.key
