--- a/journey/10-crypto-agility/profiles/pqc-ca.yaml
+++ b/journey/10-crypto-agility/profiles/pqc-ca.yaml
@@ -14,7 +14,7 @@
 # Quantum Safety: FULLY PROTECTED
 #
 # Example:
-#   pki init-ca --profile profiles/pqc-ca.yaml \
+#   pki ca init --profile profiles/pqc-ca.yaml \
 #       --name "PQC CA" --dir ./pqc-ca
 #
 # =============================================================================
