Align CLI syntax across all demos
- Convert cert issue --keyout to CSR workflow (cert csr + cert issue --csr)
- Fix --key-out to --keyout flag syntax
- Fix init-ca to ca init command
- Fix hybrid algorithm: ecdsa-p384+ml-dsa-65 to hybrid-p384-mldsa65
- Fix 04-revocation: use ECDSA CA for CRL compatibility (Go crypto/x509)
- Fix 09-cms-encryption: add --attest-cert to cert issue for RFC 9883
- Fix 10-crypto-agility: use $SCRIPT_DIR/profiles/ for absolute paths
- Update README documentation with correct CSR workflow

--- a/journey/00-quickstart/profiles/pqc-tls-server.yaml
+++ b/journey/00-quickstart/profiles/pqc-tls-server.yaml
@@ -16,7 +16,7 @@
 #   pki cert issue --ca-dir ./pqc-ca \
 #       --profile profiles/pqc-tls-server.yaml \
 #       --var cn=pq.example.com \
-#       --out pq-server.crt --key-out pq-server.key
+#       --out pq-server.crt --keyout pq-server.key
 #
 # =============================================================================
 
