--- a/journey/05-ocsp/profiles/pqc-tls-server.yaml
+++ b/journey/05-ocsp/profiles/pqc-tls-server.yaml
@@ -12,7 +12,7 @@
 #   pki cert issue --ca-dir ./ocsp-ca \
 #       --profile profiles/pqc-tls-server.yaml \
 #       --var cn=server.example.com \
-#       --out server.crt --key-out server.key
+#       --out server.crt --keyout server.key
 #
 # =============================================================================
 
