--- a/reference/experiments/11-mtls/profiles/pqc-tls-server.yaml
+++ b/reference/experiments/11-mtls/profiles/pqc-tls-server.yaml
@@ -16,7 +16,7 @@
 #       --profile profiles/tls-server.yaml \
 #       --cn "api.example.com" \
 #       --san "DNS:api.example.com,DNS:localhost" \
-#       --out server.crt --key-out server.key
+#       --out server.crt --keyout server.key
 #
 # =============================================================================
 
