--- a/journey/00-quickstart/profiles/classic-tls-server.yaml
+++ b/journey/00-quickstart/profiles/classic-tls-server.yaml
@@ -16,7 +16,7 @@
 #   pki cert issue --ca-dir ./classic-ca \
 #       --profile profiles/classic-tls-server.yaml \
 #       --var cn=classic.example.com \
-#       --out classic-server.crt --key-out classic-server.key
+#       --out classic-server.crt --keyout classic-server.key
 #
 # =============================================================================
 
