--- a/journey/04-revocation/profiles/pqc-tls-server.yaml
+++ b/journey/04-revocation/profiles/pqc-tls-server.yaml
@@ -14,7 +14,7 @@
 #   pki cert issue --ca-dir ./revocation-ca \
 #       --profile profiles/pqc-tls-server.yaml \
 #       --var cn=server.example.com \
-#       --out server.crt --key-out server.key
+#       --out server.crt --keyout server.key
 #
 # =============================================================================
 
