--- a/journey/05-ocsp/profiles/pqc-ocsp-responder.yaml
+++ b/journey/05-ocsp/profiles/pqc-ocsp-responder.yaml
@@ -16,7 +16,7 @@
 #   pki cert issue --ca-dir ./ocsp-ca \
 #       --profile profiles/ocsp-responder.yaml \
 #       --var cn="OCSP Responder" \
-#       --out ocsp-responder.crt --key-out ocsp-responder.key
+#       --out ocsp-responder.crt --keyout ocsp-responder.key
 #
 # =============================================================================
 
