fix: restore missing algorithms section in hybrid profiles
The algorithms section was accidentally removed in commit 3396c93
when reordering YAML profile sections.

--- a/journey/03-hybrid/profiles/hybrid-tls-server.yaml
+++ b/journey/03-hybrid/profiles/hybrid-tls-server.yaml
@@ -38,6 +38,11 @@ variables:
     description: "Additional DNS names for SAN"
 
 # -----------------------------------------------------------------------------
+algorithms:
+  - ecdsa-p384              # Classical: P-384 (~192-bit)
+  - ml-dsa-65               # PQC: NIST Level 3
+
+# -----------------------------------------------------------------------------
 mode: catalyst
 
 # -----------------------------------------------------------------------------
