--- a/journey/10-crypto-agility/profiles/hybrid-tls-server.yaml
+++ b/journey/10-crypto-agility/profiles/hybrid-tls-server.yaml
@@ -34,6 +34,11 @@ variables:
     description: "Common Name - Server's FQDN"
 
 # -----------------------------------------------------------------------------
+algorithms:
+  - ecdsa-p256              # Classical: P-256 (~128-bit)
+  - ml-dsa-65               # PQC: NIST Level 3
+
+# -----------------------------------------------------------------------------
 mode: catalyst
 
 # -----------------------------------------------------------------------------
