Update CLI syntax: --name → --var cn=
All demos, READMEs, and profile examples updated to use
the new --var cn= syntax instead of legacy --name flag.

--- a/journey/00-quickstart/profiles/classic-root-ca.yaml
+++ b/journey/00-quickstart/profiles/classic-root-ca.yaml
@@ -15,7 +15,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/classic-root-ca.yaml \
-#       --name "Classic Root CA" --dir ./classic-ca
+#       --var cn="Classic Root CA" --dir ./classic-ca
 #
 # =============================================================================
 
