--- a/journey/10-crypto-agility/profiles/hybrid-ca.yaml
+++ b/journey/10-crypto-agility/profiles/hybrid-ca.yaml
@@ -17,7 +17,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/hybrid-ca.yaml \
-#       --name "Hybrid CA" --dir ./hybrid-ca
+#       --var cn="Hybrid CA" --dir ./hybrid-ca
 #
 # =============================================================================
 
