--- a/journey/04-revocation/profiles/pqc-ca.yaml
+++ b/journey/04-revocation/profiles/pqc-ca.yaml
@@ -13,7 +13,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/pqc-ca.yaml \
-#       --name "Revocation Demo CA" --dir ./revocation-ca
+#       --var cn="Revocation Demo CA" --dir ./revocation-ca
 #
 # =============================================================================
 
