--- a/journey/05-ocsp/profiles/pqc-ca.yaml
+++ b/journey/05-ocsp/profiles/pqc-ca.yaml
@@ -12,7 +12,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/pqc-ca.yaml \
-#       --name "OCSP Demo CA" --dir ./ocsp-ca
+#       --var cn="OCSP Demo CA" --dir ./ocsp-ca
 #
 # =============================================================================
 
