--- a/journey/06-code-signing/profiles/pqc-ca.yaml
+++ b/journey/06-code-signing/profiles/pqc-ca.yaml
@@ -10,7 +10,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/pqc-ca.yaml \
-#       --name "Code Signing CA" --dir ./code-signing-ca
+#       --var cn="Code Signing CA" --dir ./code-signing-ca
 #
 # =============================================================================
 
