--- a/journey/07-timestamping/profiles/pqc-ca.yaml
+++ b/journey/07-timestamping/profiles/pqc-ca.yaml
@@ -10,7 +10,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/pqc-ca.yaml \
-#       --name "TSA CA" --dir ./tsa-ca
+#       --var cn="TSA CA" --dir ./tsa-ca
 #
 # =============================================================================
 
