--- a/journey/09-cms-encryption/profiles/pqc-ca.yaml
+++ b/journey/09-cms-encryption/profiles/pqc-ca.yaml
@@ -13,7 +13,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/pqc-ca.yaml \
-#       --name "Encryption Demo CA" --dir ./encryption-ca
+#       --var cn="Encryption Demo CA" --dir ./encryption-ca
 #
 # =============================================================================
 
