--- a/journey/10-crypto-agility/profiles/pqc-ca.yaml
+++ b/journey/10-crypto-agility/profiles/pqc-ca.yaml
@@ -15,7 +15,7 @@
 #
 # Example:
 #   pki ca init --profile profiles/pqc-ca.yaml \
-#       --name "PQC CA" --dir ./pqc-ca
+#       --var cn="PQC CA" --dir ./pqc-ca
 #
 # =============================================================================
 
