feat(lab): add --cred-dir flag to credential commands in journey 10
Update crypto-agility demo to use separate credentials directory:
- Add --cred-dir output/credentials to all credential commands
- Create output/credentials directory in demo setup
- Update README examples with new flag
- Update profile YAML comments with new flag

--- a/journey/10-crypto-agility/profiles/hybrid-tls-server.yaml
+++ b/journey/10-crypto-agility/profiles/hybrid-tls-server.yaml
@@ -17,6 +17,7 @@
 #
 # Example:
 #   pki credential enroll --ca-dir output/ca \
+#       --cred-dir output/credentials \
 #       --profile profiles/tls-server-hybrid.yaml \
 #       --var cn=server.example.com
 #
