--- a/journey/10-crypto-agility/profiles/pqc-tls-server.yaml
+++ b/journey/10-crypto-agility/profiles/pqc-tls-server.yaml
@@ -15,6 +15,7 @@
 #
 # Example:
 #   pki credential enroll --ca-dir output/ca \
+#       --cred-dir output/credentials \
 #       --profile profiles/tls-server-pqc.yaml \
 #       --var cn=server.example.com
 #
